--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -74,9 +74,8 @@
         </div>
     </nav>
 
-    <div class="row form-container">
-        <div class="col-md-8 offset-md-2">
-            <div class="d-flex justify-content-between align-items-center mb-4">
+    <main class="container py-4">
+        <div class="list-container"> <div class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="h4 mb-0">
                 <i class="fas fa-users me-2 text-primary"></i>Cadastro de Funcionários
             </h1>
@@ -159,7 +158,7 @@
                 </div>
             </form>
         </div>
-    </div>
+</main>
 </div>
 </body>
 
